--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,7 +78,7 @@
     {% include '@FSchmidDevCore/layout/_header.html.twig' %}
 {% endblock %}
 {% block alerts %}
-    {% include '@FSchmidDevCore/_alerts.html.twig' with { 'error': error } %}
+    {% include '@FSchmidDevCore/_alerts.html.twig' %}
 {% endblock %}
 
 {% block main %}
