--- a/templates/layout/_header.html.twig
+++ b/templates/layout/_header.html.twig
@@ -24,6 +24,14 @@
                             {% include '@FSchmidDevCore/account/_profile-picture.html.twig' with {small: true} %}
                         </a>
                     </li>
+                {% else %}
+                    <li class="menu-item">
+                        <a href="{{ path('app_login') }}" class="menu-link">
+                            <span class="bg-white rounded-circle position-relative overflow-hidden" style="width: 2.5rem; height: 2.5rem;">
+                                <i class="fas fa-user fa-fw fa-2xl text-dark absolute-center mt-1"></i>
+                            </span>
+                        </a>
+                    </li>
                 {% endif %}
                 <li class="menu-item" {{ stimulus_controller('mburger', {
                     mBurger: '<mm-burger
@@ -117,7 +125,7 @@
                                     <div class="d-flex flex-column w-100">
                                         <a href="{{ path('app_account') }}"
                                            class="button button--primary button--small mb-3 text-nowrap text-center">
-                                            {{ "menu.manage_account"|trans }}
+                                            {{ "menu.manageAccount"|trans }}
                                         </a>
                                         <a href="{{ path("app_logout") }}"
                                            class="button button--small text-nowrap text-center">
@@ -130,11 +138,11 @@
                     {% endif %}
                     <li class="menu-item" {{ stimulus_controller('theme-toggle') }}>
                         <a href="#" class="menu-link" {{ stimulus_action('theme-toggle', 'toggle') }}>
-                            <div class="theme-dark-hide" title="{{ 'menu.theme.change_to_dark'|trans }}">
+                            <div class="theme-dark-hide" title="{{ 'menu.theme.changeToDark'|trans }}">
                                 <i class="fas fa-moon fa-lg fa-fw me-2 me-lg-0"></i>
                                 <div class="d-inline-block d-lg-none">{{ 'menu.theme.dark'|trans }}</div>
                             </div>
-                            <div class="theme-light-hide" title="{{ 'menu.theme.change_to_light'|trans }}">
+                            <div class="theme-light-hide" title="{{ 'menu.theme.changeToLight'|trans }}">
                                 <i class="fas fa-sun fa-lg fa-fw me-2 me-lg-0"></i>
                                 <div class="d-inline-block d-lg-none">{{ 'menu.theme.light'|trans }}</div>
                             </div>
