Update base styling and templates

--- a/assets/styles/block/_button.scss
+++ b/assets/styles/block/_button.scss
@@ -30,8 +30,8 @@
   --button-green-bg: var(--green);
   --button-green-border: var(--green);
   --button-green-color: var(--white);
-  --button-green-bg-hover: var(--green-light);
-  --button-green-border-hover: var(--green-light);
+  --button-green-bg-hover: var(--green-dark);
+  --button-green-border-hover: var(--green-dark);
   --button-green-color-hover: var(--white);
 
   --button-red-bg: var(--red);
