--- a/assets/styles/block/_list.scss
+++ b/assets/styles/block/_list.scss
@@ -42,7 +42,7 @@
 
     &,
     & * {
-      // color: var(--list-item-hover-link-color);
+      color: var(--list-item-hover-link-color);
     }
   }
 
