--- a/templates/layout/_header.html.twig
+++ b/templates/layout/_header.html.twig
@@ -56,7 +56,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a class="menu-link" href="{{ path('app_register') }}">
+                            <a class="menu-link" href="{#{ path('app_register') }#}">
                                 <i class="fas fa-user-plus fa-fw me-2"></i> {{ 'menu.register'|trans }}
                             </a>
                         </li>
