Add register link

--- a/templates/layout/mmenu/_mmenu.html.twig
+++ b/templates/layout/mmenu/_mmenu.html.twig
@@ -8,7 +8,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{#{ path('app_register') }#}" title="{{ 'menu.register'|trans }}">
+                    <a href="{{ path('app_register') }}" title="{{ 'menu.register'|trans }}">
                         <i class="fas fa-fw fa-user-plus me-2"></i>{{ 'menu.register'|trans }}
                     </a>
                 </li>
