--- a/templates/layout/_header.html.twig
+++ b/templates/layout/_header.html.twig
@@ -7,7 +7,7 @@
         }) }}
 >
     {% if app.request.host ends with '.wip' %}
-        <div class="alert alert-warning p-1 w-100">
+        <div class="alert alert--warning p-1 w-100">
             <div class="text-center">
                 <span>Localhost Development</span>
             </div>
