--- a/templates/layout/_variables.html.twig
+++ b/templates/layout/_variables.html.twig
@@ -1,4 +1,4 @@
 <style>
-    {{ include('@styles/style/_variables.scss') }}
-    {{ include('@styles/style/_dark.scss') }}
+    {{ include('@styles/style/_variables.css') }}
+    {{ include('@styles/style/_dark.css') }}
 </style>
